prometheus-service.yaml
kind: Service
apiVersion: v1
metadata:
  name: prometheus-service
  namespace: monitoring
  annotations:
      prometheus.io/scrape: 'true'
      prometheus.io/port:   '9090'
  
spec:
  selector:
    app: prometheus-server
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 9090
